--- a/EnvironmentalMonitor(old)/src/css/monitorpage/page-navigator.css
+++ b/EnvironmentalMonitor(old)/src/css/monitorpage/page-navigator.css
@@ -1,18 +1,19 @@
-.ctm-navibar{
+.ctm-navibar {
     display: flex;
-    height:100%;
+    height: 100%;
     width: 100%;
     /* margin: 0; */
     padding: 0 10px;
     justify-content: space-between;
     font-size: 16px;
-    background-color: rgb(87,134,238);
+    background-color: rgb(87, 134, 238);
 }
 
-.ctm-navibar__header{
+.ctm-navibar__header {
     margin-left: 1em;
     margin-top: 0.7em;
 }
+
 
 /* .software-name,
 .software-name:link,
@@ -25,7 +26,7 @@
     color: white;
 } */
 
-.software-name{
+.software-name {
     display: flex;
     /* align-items: center; */
     flex-direction: column;
@@ -34,62 +35,62 @@
     color: white;
 }
 
-.en-name{
+.en-name {
     position: relative;
     font-size: 1.125em;
     /* text-indent: 1em; */
 }
 
-.en-name-suffix{
+.en-name-suffix {
     font-size: 0.8em;
     vertical-align: top;
 }
 
-.en-name::before{
+.en-name::before {
     display: inline;
 }
 
-.ch-name{
+.ch-name {
     font-size: 1.125em;
     font-weight: 600;
 }
 
 .ctm-navibar__middle,
-.ctm-navibar__right{
-    height: 100%;   
+.ctm-navibar__right {
+    height: 100%;
     text-align: center;
 }
 
-.ctm-navibar__middle{
+.ctm-navibar__middle {
     /* width: 60%; */
     display: inline-flex;
 }
 
-.ctm-navibar-item{
+.ctm-navibar-item {
     /* display: inline-block; */
-    height:100%; 
+    height: 100%;
     text-align: center;
 }
 
-.ctm-navibar-item.ctm-navibar-item_middle{
+.ctm-navibar-item.ctm-navibar-item_middle {
     width: 8em;
 }
 
-.ctm-navibar-item__href{
+.ctm-navibar-item__href {
     display: block;
-    height:100%;
+    height: 100%;
     text-decoration: none;
-    color:white;
-    cursor: pointer; 
+    color: white;
+    cursor: pointer;
 }
 
-.ctm-navibar-item__href.ctm-navibar-item__href_middle{
+.ctm-navibar-item__href.ctm-navibar-item__href_middle {
     padding-top: 1.875em;
     padding-bottom: 1em;
     /* font-size: 1em; */
 }
 
-.monitor-item-pop{
+.monitor-item-pop {
     /* overflow-x: auto; */
     /* max-width: calc(100% - 15px); */
     /* white-space:nowrap; */
@@ -98,22 +99,26 @@
     padding: 5px 0;
 }
 
-.monitor-item-pop__list{
-    overflow-y:auto;
+.monitor-item-pop__list {
+    overflow-y: auto;
     max-height: 450px;
 }
 
-.monitor-item-pop__list::-webkit-scrollbar {/*滚动条整体样式*/
-    width: 2px;     /*高宽分别对应横竖滚动条的尺寸*/
+.monitor-item-pop__list::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width: 2px;
+    /*高宽分别对应横竖滚动条的尺寸*/
     height: 2px;
 }
-.monitor-item-pop__list::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+
+.monitor-item-pop__list::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
     border-radius: 1px;
-    -webkit-box-shadow: inset 0 0 5px rgb(128,128,128);
+    -webkit-box-shadow: inset 0 0 5px rgb(128, 128, 128);
     background: gray;
 }
 
-.ctm-navibar-item__href.ctm-navibar-item__href_right{
+.ctm-navibar-item__href.ctm-navibar-item__href_right {
     padding-top: 1.667em;
     padding-bottom: 0.8em;
     font-size: 1.125em;
@@ -121,21 +126,22 @@
 
 .ctm-navibar-item__href:hover,
 .ctm-navibar-item__href:focus,
-.ctm-navibar-item__href_active{
-    background-color: rgb(103,146,240);
+.ctm-navibar-item__href_active {
+    background-color: rgb(103, 146, 240);
     text-decoration: none;
-    color:white; 
+    color: white;
 }
 
-.ctm-navibar-item__href_active{
-    border-bottom:4px solid white ;
+.ctm-navibar-item__href_active {
+    border-bottom: 4px solid white;
 }
 
-.ctm-navibar__right{
+.ctm-navibar__right {
     display: inline-flex;
     /* width: 16%; */
     /* font-size: 0; */
 }
+
 
 /* .ctm-navibar__right .choose-place{
     width: 20%;
@@ -146,15 +152,64 @@
     font-size: 0.9rem;    		
 } */
 
-.ctm-navibar-item.ctm-navibar-item_right{
+.ctm-navibar-item.ctm-navibar-item_right {
     position: relative;
     width: 3em;
     /* font-size: 16px; */
 }
 
+
 /* .ctm-navibar__right .lain-icon:last-child .dropdown-menu{
     left:-100px;
 } */
-.ctm-navibar-item_right .el-badge__content{
+
+.ctm-navibar-item_right .el-badge__content {
     border: none;
+}
+
+.tips-content {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    color: #999999;
+}
+
+.tips-content img {
+    height: 3vh;
+    width: 2.2vw;
+    margin-right: 0.7vw;
+    margin-left: 0.7vw;
+}
+
+.tips-content div {
+    margin-bottom: 0.3vh;
+    margin-top: 0.8vh;
+    line-height: 5.5vh;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    width: 100%;
+}
+
+.tips-content div:hover {
+    background-color: rgb(245, 247, 250);
+    text-decoration: none;
+}
+
+.el-popover {
+    padding: 0;
+}
+
+
+/* .classif {
+    width: 6vw;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+} */
+
+.active {
+    color: blue;
+    text-decoration: underline;
 }
